force-app/main/default/objects/Quote_Request__c/fields/Builder_Approval__c.field-meta.xml
<CustomField>
    <fullName>Builder_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Builder Approval</label>
    <type>Checkbox</type>
</CustomField>