force-app/main/default/objects/Quote_Request__c/fields/Builder_PO_Ref__c.field-meta.xml
<CustomField>
    <fullName>Builder_PO_Ref__c</fullName>
    <label>Builder PO Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>