force-app/main/default/objects/Quote_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Scope Outside PO</fullName><default>true</default><label>Scope Outside PO</label></value>
            <value><fullName>Change Order</fullName><default>false</default><label>Change Order</label></value>
            <value><fullName>Warranty Proposal</fullName><default>false</default><label>Warranty Proposal</label></value>
            <value><fullName>Aqua Addition</fullName><default>false</default><label>Aqua Addition</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>