force-app/main/default/objects/Quote_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quote Requests</relationshipLabel>
    <relationshipName>Quote_Requests_FM</relationshipName>
    <type>Lookup</type>
</CustomField>