force-app/main/default/objects/Quote_Request__c/fields/Scope_Description__c.field-meta.xml
<CustomField>
    <fullName>Scope_Description__c</fullName>
    <label>Scope Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>