force-app/main/default/objects/Quote_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Sent to CSM</fullName><default>false</default><label>Sent to CSM</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>On Hold</fullName><default>false</default><label>On Hold</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>